--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@lagdotcom/simple-inputs": "git+https://github.com/lagdotcom/simple-inputs.git",
     "three": "^0.128.0"
   }
 }
