--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "rollup": "^2.46.0",
     "rollup-plugin-hot": "^0.1.1",
     "rollup-plugin-import-file": "^1.0.1",
-    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
@@ -40,6 +39,7 @@
   },
   "dependencies": {
     "@lagdotcom/simple-inputs": "git+https://github.com/lagdotcom/simple-inputs.git",
+    "eventemitter3": "^4.0.7",
     "three": "^0.128.0"
   }
 }
