--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-url": "^6.0.0",
+    "@types/debug": "^4.1.5",
     "@types/node": "^15.0.1",
     "@types/three": "^0.127.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
@@ -29,7 +28,6 @@
     "prettier": "^2.2.1",
     "rollup": "^2.47.0",
     "rollup-plugin-hot": "^0.1.1",
-    "rollup-plugin-import-file": "^1.0.1",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-sourcemaps": "^0.6.3",
     "rollup-plugin-terser": "^7.0.2",
