--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "ts-node": "^9.1.1",
+    "ts-transformer-keys": "^0.4.3",
     "typescript": "^4.2.4"
   },
   "dependencies": {
