--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "author": "Lag.Com <lagdotcom@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
+    "@rollup/plugin-commonjs": "^18.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
     "@types/debug": "^4.1.5",
-    "@types/node": "^15.0.1",
+    "@types/node": "^15.0.2",
     "@types/three": "^0.127.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@lagdotcom/simple-inputs": "git+https://github.com/lagdotcom/simple-inputs.git",
+    "debug": "^4.3.1",
     "eventemitter3": "^4.0.7",
     "three": "^0.128.0"
   }
