--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "rollup -c",
     "watch": "rollup -cw",
     "start": "rollup -cw",
+    "grammar": "nearleyc dscript.ne -o src/DScript/grammar.ts",
+    "parserTest": "ts-node src/DScript/parserTest.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Lag.Com <lagdotcom@gmail.com>",
@@ -16,8 +18,10 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@types/debug": "^4.1.7",
+    "@types/moo": "^0.5.5",
+    "@types/nearley": "^2.11.2",
     "@types/node": "^16.7.0",
-    "@types/three": "^0.131.0",
+    "@types/three": "^0.132.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
@@ -26,6 +30,7 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-radar": "^0.2.1",
     "eslint-plugin-woke": "^1.0.0",
+    "nearley": "^2.20.1",
     "prettier": "^2.3.2",
     "rollup": "^2.56.2",
     "rollup-plugin-hot": "^0.1.1",
@@ -41,6 +46,6 @@
     "@lagdotcom/simple-inputs": "git+https://github.com/lagdotcom/simple-inputs.git",
     "debug": "^4.3.2",
     "eventemitter3": "^4.0.7",
-    "three": "^0.131.3"
+    "three": "^0.132.2"
   }
 }
