--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "target": "esnext",
     "lib": ["DOM", "ESNEXT"]
   },
+  "ts-node": { "compilerOptions": { "module": "commonjs" } },
+
   "include": ["src/**/*", "res"],
   "exclude": ["node_modules"]
 }
