--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "rollup -c",
     "watch": "rollup -cw",
     "start": "rollup -cw",
+    "lint": "eslint src",
     "grammar": "nearleyc dscript.ne -o src/DScript/grammar.ts",
     "parserTest": "ts-node src/DScript/parserTest.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,15 +21,14 @@
     "@types/debug": "^4.1.7",
     "@types/moo": "^0.5.5",
     "@types/nearley": "^2.11.2",
-    "@types/node": "^16.7.0",
-    "@types/three": "^0.134.0",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.3",
-    "eslint": "^7.32.0",
+    "@types/node": "^17.0.0",
+    "@types/three": "^0.139.0",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-array-func": "^3.1.7",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-radar": "^0.2.1",
     "eslint-plugin-woke": "^1.0.0",
     "nearley": "^2.20.1",
     "prettier": "^2.3.2",
@@ -46,6 +46,6 @@
     "@lagdotcom/simple-inputs": "git+https://github.com/lagdotcom/simple-inputs.git",
     "debug": "^4.3.2",
     "eventemitter3": "^4.0.7",
-    "three": "^0.134.0"
+    "three": "^0.139.0"
   }
 }
